--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Uploads and migrations (removed for GitHub)
+uploads/
+temp/
+src/migrations/
+src/users/seed-users.ts
+SEED_README.md
